# qwerty

./: .gitignore  README.md  pyproject.toml  schema.sql  setup.py  vibe-server-memory-system.md
cli/: ai.py  config.py  context.py  display.py  env.py  main.py  repl.py  ssh.py  sync.py
cli/auth/: keychain.py  vault.py
cli/db/: brain.py  file_tracker.py  memory.py  models.py  session_log.py
cli/modes/: __init__.py  base.py  debug.py  deploy.py  general.py  hoster.py  loader.py  monitor.py
cli/plugins/: certbot.py  docker.py  loader.py  nginx.py  pm2.py
qwerty.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: start_test_vps.sh  test_models.py
tests/: test_ai.py  test_config.py  test_db.py  test_repl.py  test_ssh.py
vibe_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
web/: package-lock.json  package.json
web/src/app/: ConsoleDashboard.js  LandingPage.js  globals.css  layout.js  mockData.js  page.js
web/src/app/api/data/: route.js
web/src/app/api/sync/: route.js
web/src/app/lib/: supabase.js
